wayland/outputdevice: delay done event until the output has a UUID

The output device is created immediately after the output, but the UUID is only
set by workspace a bit later.

Co-authored-by: Julien Delquié julien.dlq@gmail.com

BUG: 521826


(cherry picked from commit 1d45c66c1fcb6e03c3bc23322f84dc0fcf92889d)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>